--- a/src/scss/components/_basket-round.scss
+++ b/src/scss/components/_basket-round.scss
@@ -15,4 +15,14 @@
     &--trash {
         left: 20rem;
     }
+
+    &__glyph {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 1.5rem;
+        height: 1.5rem;
+        filter: brightness(0) invert(1);
+    }
 }
