--- a/src/scss/components/_search-results.scss
+++ b/src/scss/components/_search-results.scss
@@ -9,15 +9,6 @@
     font-weight: 700;
 }
 
-.search-rule {
-    position: absolute;
-    top: 4.3rem;
-    left: 13.55rem;
-    width: 0.05rem;
-    height: 1.65rem;
-    background: rgb(0, 0, 0, 0.25);
-}
-
 .results-board {
     position: absolute;
     top: 8.05rem;
